Added tests and changed nvm version

--- a/src/app/login/login.jade
+++ b/src/app/login/login.jade
@@ -1,6 +1,6 @@
 .col-md-2.login-logo
-  img.hidden-md.hidden-sm(src='app/assets/logo.png' height='80px')
-  img.hidden-lg.hidden-xs.col-md-offset-1(src='app/assets/logo.png' height='60px' width="80px")
+  img.hidden-sm.big-logo(src='app/assets/logo.png')
+  img.hidden-md.hidden-lg.hidden-xs.small-logo.col-md-offset-2(src='app/assets/logo.png')
 .col-md-4.col-md-offset-2.login-form
   h2 Login
   form(name='form', ng-submit='vm.authenticate(vm.username, vm.password)', role='form')
