Add module files

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,5 +1,5 @@
 @import "styles/dashboard";
-@import "styles/colors";
+//@import "styles/colors";
 /* Do not remove the comments below. It's the markers used by wiredep to inject
    sass dependencies when defined in the bower.json of your dependencies */
 // bower:scss
