--- a/src/app/dashboard/dashboard.jade
+++ b/src/app/dashboard/dashboard.jade
@@ -14,19 +14,12 @@ nav.navbar.navbar-default( role="navigation" )
     li.dropdown
       a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Dropdown
           span.caret
-  ul.dropdown-menu( role="menu" )
-    li: a( href="#" ) Action
-    li: a( href="#" ) Another action
-    li: a( href="#" ) Something else here
-    li.divider
-    li.dropdown-header Nav header
-    li: a( href="#" ) Separated link
-    li: a( href="#" ) One more separated link
+aside
+  ul
+    li: a.iconicfill-home(href='#') Overview
 
-  ul.list-group
-    li.list-group-item.active Cras justo odio
-    li.list-group-item Dapibus ac facilisis in
-    li.list-group-item Morbi leo risus
-    li.list-group-item Dapibus ac facilisis in
-    li.list-group-item Morbi leo risus
-    li.list-group-item Dapibus ac facilisis in
+    li: a.iconicfill-mail(href='#') Edad
+    li: a.iconicfill-user(href='#') Genero
+    li: a.iconicfill-iphone(href='#') Respuestas
+    li: a.iconicfill-cog(href='') Settings
+    li.search.iconicfill-magnifying-glass: input(placeholder='Search')
