--- a/src/app/dashboard/age/age.jade
+++ b/src/app/dashboard/age/age.jade
@@ -16,10 +16,10 @@
           header
             h3.iconicfill-mail Edad
           .content
-            div(ng-repeat="person in vm.people")
+            div(ng-repeat="person in vm.people | orderBy:'-age'")
                 p
                   strong Edad:
-                  | {{ person.age }}
+                  | {{person.username}} {{ person.age }} {{person.answers}}
 
 
     footer
