--- a/src/app/dashboard/answers/answers.jade
+++ b/src/app/dashboard/answers/answers.jade
@@ -1,5 +1,5 @@
 -var title = "Dashboard";
--var author = "@lorenz"
+-var author = "@Pernixsolutions"
 
 .dashboard
   main
@@ -16,12 +16,12 @@
           header
             h3.iconicfill-mail Answers
           .content
-            div(ng-repeat="person in vm.people")
+            div(ng-repeat="person in vm.people | orderBy:'-answers'")
                 p
                   strong Answers
                   | {{ person.answers }}
 
 
     footer
-      p &copy; 2015 #{title} by #{author}
+      p &copy; 2016 #{title} by #{author}
 
