--- a/src/app/styles/_dashboard.scss
+++ b/src/app/styles/_dashboard.scss
@@ -2,6 +2,7 @@
 @import url(http://weloveiconfonts.com/api/?family=iconicfill);
 
 [class*="iconicfill-"]::before {
+
   font-family: 'IconicFill', sans-serif;
   font-size: 1.2rem;
 }
@@ -21,41 +22,44 @@ $ffamily: "Ubuntu", Helvetica, Verdana, sans-serif;
 // basics
 * { box-sizing: border-box; }
 
-html,
-body,
-.dashboard {
+html, body, .dashboard {
+
   width: 100%;
   height: 100%;
 }
 
 // global font styling
-html,
-body,
-input,
-textarea {
+
+html, body, input, textarea {
+
   font: 300 $default $ffamily;
 }
 h1, h2 {
   color: $gray;
 }
 h1 {
+
   font: 700 1.75rem $ffamily;
   border-bottom: 0.5rem solid $purple;
   margin: 0 0 2rem 0;
 }
 h2 {
+
   font: 700 1.5rem $ffamily;
   margin: 0 0 $default 0;
 }
 h3 {
+
   font-weight: 500;
 }
 p {
+
   margin: 0 0 $default 0;
 }
 
 // layout
 .dashboard {
+
   font: 300 1rem $ffamily;
   display: flex;
   flex-flow: row wrap;
@@ -73,8 +77,7 @@ aside {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 
-  li a,
-  .search {
+li a, .search {
     display: block;
     color: $clouds;
     text-decoration: none;
