--- a/src/app/dashboard/answers/answers.jade
+++ b/src/app/dashboard/answers/answers.jade
@@ -5,7 +5,7 @@
   main
     .overview
       div
-        img(src='app/assets/logo.png', style='\
+        img(src='app/assets/files/pictures/logo.png', style='\
     height: 60px;\
     ')
       h2 Overview
@@ -17,13 +17,19 @@
             h3.iconicfill-mail Respuestas
           .content
             div(ng-repeat="person in vm.people | orderBy:'-answers'")
-                p
-                  strong Nombre:
-                  |  {{ person.username}}
-                  strong Edad:
-                  |  {{ person.age}}
-                  strong Respuestas Correctas:
-                  |  {{ person.answers}}
+
+              table.flat-table.flat-table-1
+
+                    thead
+                      th Nombre de usuario
+
+                      th Respuestas correctas
+                    tbody
+                      tr
+                        td | {{person.username}}
+
+                        td | {{person.answers}}
+
 
 
     footer
