css changes and new logo

--- a/src/app/styles/_dashboard.scss
+++ b/src/app/styles/_dashboard.scss
@@ -206,7 +206,7 @@ div.dashboard-content {
     transition: background 0.3s, box-shadow 0.3s;
   }
   .flat-table-1 {
-    background: #336ca6;
+    background: #7E858B;
   }
   .flat-table-1 tr:hover {
     background: rgba(0,0,0,0.19);
