Fix table style

--- a/src/app/dashboard/age/age.jade
+++ b/src/app/dashboard/age/age.jade
@@ -8,7 +8,6 @@
         img(src='app/assets/files/pictures/logo.png', style='\
     height: 60px;\
     ')
-      h2 Overview
 
       .widget-container
 
@@ -16,18 +15,16 @@
           header
             h3.iconicfill-mail Edad
           .content
-            div(ng-repeat="person in vm.people | orderBy:'-age'")
-              table.flat-table.flat-table-1
-
-                    thead
-                      th Mombre
-                      th Edad
-                      th Respuestas correctas
-                    tbody
-                      tr
-                        td | {{person.username}}
-                        td | {{person.age}}
-                        td | {{person.answers}}
+            table.flat-table.flat-table-1
+              thead
+                th Mombre
+                th Edad
+                th Respuestas correctas
+              tbody
+                tr(ng-repeat="person in vm.people | orderBy:'-age'")
+                  td {{person.username}}
+                  td {{person.age}}
+                  td {{person.answers}}
 
 
 
