--- a/src/app/dashboard/answers/answers.jade
+++ b/src/app/dashboard/answers/answers.jade
@@ -8,7 +8,6 @@
         img(src='app/assets/files/pictures/logo.png', style='\
     height: 60px;\
     ')
-      h2 Overview
 
       .widget-container
 
@@ -16,19 +15,14 @@
           header
             h3.iconicfill-mail Respuestas
           .content
-            div(ng-repeat="person in vm.people | orderBy:'-answers'")
-
-              table.flat-table.flat-table-1
-
-                    thead
-                      th Nombre de usuario
-
-                      th Respuestas correctas
-                    tbody
-                      tr
-                        td | {{person.username}}
-
-                        td | {{person.answers}}
+            table.flat-table.flat-table-1
+              thead
+                th Nombre de usuario
+                th Respuestas correctas
+              tbody
+                tr(ng-repeat="person in vm.people | orderBy:'-answers'")
+                  td {{person.username}}
+                  td {{person.answers}}
 
 
 
