--- a/src/app/dashboard/dashboard.jade
+++ b/src/app/dashboard/dashboard.jade
@@ -9,3 +9,8 @@ div.dashboard-content
       li.search.iconicfill-magnifying-glass: input(placeholder='Search')
 
   div.dashboard-main(ui-view)
+    .dashboard
+      main
+        .overview
+          div
+            img(src='app/assets/files/pictures/logo.png', style='height: 60px;')
