--- a/src/app/styles/_dashboard.scss
+++ b/src/app/styles/_dashboard.scss
@@ -159,8 +159,9 @@ main {
 }
 
 .dashboard-main {
-  display: inline-block;
-  width: 80%;
+  //display: inline-block;
+  width: 100%;
+  padding-left: 20%;
 }
 
 div.dashboard-content {
@@ -171,6 +172,12 @@ div.dashboard-content {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+}
+
+.dashboard-content aside {
+  height: 100%;
+  position: fixed;
+  float: left;
 }
 
 .flat-table {
