--- a/src/app/dashboard/gender/gender.jade
+++ b/src/app/dashboard/gender/gender.jade
@@ -21,7 +21,7 @@
                 th Nombre de usuario
                 th Respuestas correctas
               tbody
-                tr(ng-repeat="person in vm.people | filter: { gender: 'M' }")
+                tr(ng-repeat="person in vm.people | filter: { gender: 'M' } | orderBy:'-answers'")
                   td {{person.username}}
                   td {{person.answers}}
 
@@ -32,7 +32,7 @@
                 th Nombre de usuario
                 th Respuestas correctas
               tbody
-                tr(ng-repeat="person in vm.people | filter: { gender: 'F' }")
+                tr(ng-repeat="person in vm.people | filter: { gender: 'F' } | orderBy:'-answers'")
                   td {{person.username}}
                   td {{person.answers}}
 
