Remove unused classes from dashboard

--- a/src/app/dashboard/dashboard.jade
+++ b/src/app/dashboard/dashboard.jade
@@ -1,12 +1,12 @@
 div.dashboard-content
   aside
     ul
-      li: a.iconicfill-home(ui-sref="dashboard") Overview
-      li: a.iconicfill-mail(ui-sref="dashboard.age") Edad
-      li: a.iconicfill-user(ui-sref="dashboard.gender") Genero
-      li: a.iconicfill-iphone(ui-sref="dashboard.answers") Respuestas
-      li: a.iconicfill-cog(ui-sref="dashboard") Settings
-      li.search.iconicfill-magnifying-glass: input(placeholder='Search')
+      li: a(ui-sref="dashboard") Overview
+      li: a(ui-sref="dashboard.age") Edad
+      li: a(ui-sref="dashboard.gender") Genero
+      li: a(ui-sref="dashboard.answers") Respuestas
+      li: a(ui-sref="dashboard") Settings
+      li.search: input(placeholder='Search')
 
   div.dashboard-main(ui-view)
     .dashboard
